# gp-nrf-ble-blinky

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  LICENSE.md  README.md  prj.conf  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  VERSION  debug.conf  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf  sample.yaml
app/src/: main.c
app/src/controllers/: led_controller.c
boards/arm/gp_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  gp_nrf52840-leds.dtsi  gp_nrf52840.dts
boards/arm/ns_nrf52840_dk/: Kconfig.board  Kconfig.defconfig  ns_nrf52840_dk-leds.dtsi  ns_nrf52840_dk.dts  ns_nrf52840_dk.yaml  ns_nrf52840_dk_defconfig
boards/arm/ns_nrf52840_usb_dongle/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  ns_nrf52840_usb_dongle-leds.dtsi  ns_nrf52840_usb_dongle.dts  ns_nrf52840_usb_dongle.yaml  ns_nrf52840_usb_dongle_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/ble/: CMakeLists.txt  Kconfig
drivers/ble/src/: ble.c
drivers/led/: CMakeLists.txt  Kconfig
drivers/led/src/: led.c  led_ble.h  led_blinky.h
drivers/sensor/: CMakeLists.txt
drivers/sensor/examplesensor/: CMakeLists.txt  Kconfig  examplesensor.c
dts/bindings/sensor/: zephyr,examplesensor.yaml
include/custom_lib/: custom_lib.h
include/drivers/: ble.h  led.h
lib/: CMakeLists.txt  Kconfig
lib/custom_lib/: CMakeLists.txt  Kconfig  custom_lib.c
scripts/: west-commands.yml  west_command.py
src/: main.c
src/controllers/: ble_controller.c  ble_controller.h  led_controller.c  led_controller.h
zephyr/: module.yml
(+4 files in other folders)
